Add card aligner, bump gradle, fix cache loading, colour bar